Fix segfault when analyzing source code issue

Hi KDevelop developers,

```
Thread 1 "kdevelop" received signal SIGSEGV, Segmentation fault.
0x00007fffbbde43de in cppcheck::Parameters::Parameters (this=0x7fffffffa870, project=0x192f730)
    at /data/project/kde/kdevelop/analyzers/cppcheck/parameters.cpp:110
110         m_projectBuildPath   = m_project->buildSystemManager()->buildDirectory(m_project->projectItem());
```

so I simply added ```if (m_project->buildSystemManager())``` check before calling ```m_project->buildSystemManager()->buildDirectory(...)```

Regards,
Leslie Zhai

REVIEW: 129767
BUG: 374525
FIXED-IN: 5.1.0